# Hive-Game-RL-Try

./: .gitignore  CMakeLists.txt  README.md  board.py  build.sh  game.py  main.py  piece.py  player.py  utils.py  昆虫棋（Hive）Python 重构版本说明报告.md
include/: AIPlayer.h  Game.h  Player.h  include.h
src/: AIPlayer.cpp  Game.cpp  main_ai.cpp
